--- a/ClocksessionGhostQAAutomation/ClocksessionAutomation.csproj
+++ b/ClocksessionGhostQAAutomation/ClocksessionAutomation.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="C:\Users\Nitin\.nuget\packages\allure.commons\3.5.0.73\contentFiles\any\netstandard2.0\allureConfig.Template.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Allure.Commons" Version="3.5.0.73" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
