--- a/SeleniumReportAPI/SeleniumReportAPI.csproj
+++ b/SeleniumReportAPI/SeleniumReportAPI.csproj
@@ -83,7 +83,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="C:\Users\Nitin\source\repos\ClockSessionGhostQA\ClocksessionGhostQAAutomation\ClocksessionAutomation.csproj" />
+	  <ProjectReference Include="..\ClocksessionGhostQAAutomation\ClocksessionAutomation.csproj" />
 	</ItemGroup>
 
 </Project>
