--- a/SeleniumReportAPI/appsettings.json
+++ b/SeleniumReportAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppDBContextConnection": "Data Source=CODEARREST\\SQLEXPRESS;Initial Catalog=SeleniumTest;Integrated Security=True"
+    "AppDBContextConnection": "Data Source=CODEARREST\\SQLEXPRESS;Initial Catalog=GhostQAClock;Integrated Security=True"
     //"AppDBContextConnection": "Data Source=IDEAPAD\\SQLEXPRESS;Initial Catalog=SeleniumTest;Integrated Security=True"
     //"AppDBContextConnection": "Data Source=EC2AMAZ-GR81U4B; Initial Catalog=SeleniumTest;User ID=sa;Password=P@ssw0rd"
   },
